--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}
 spec:
   ports:
-    - port: 80
-      targetPort: 80
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
   selector:
-    app: my-app
+    app: {{ .Release.Name }}
