--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,8 @@
-FROM golang:1.14
-
+FROM golang:1.14 as builder
 WORKDIR /app
-
 COPY . .
-
 RUN go build -o app
-
-CMD /app/app
+FROM alpine:latest
+WORKDIR /app
+COPY --from=builder /app/app /app/app
+CMD ["/app/app"]
