--- a/chart/templates/pvc.yaml
+++ b/chart/templates/pvc.yaml
@@ -3,8 +3,9 @@ apiVersion: v1
 metadata:
   name: {{ .Release.Name }}
 spec:
+  storageClassName: {{ .Values.storage }}
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
